--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-card-flip": "^1.2.3",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
